# ai-chief-of-staff

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
app/: app.py  main.py  schema.py
app/agent/: agent.py  consolidate.py  extractor.py  memory.py  open_loops.py  proactive.py  profile.py  scheduler.py  watcher.py
app/agents/: __init__.py  watcher.py
app/config/: settings.py
app/interfaces/: dashboard.py  telegram.py
app/lib/: database.py  events.py  usage.py  vectors.py
app/llm/: anthropic.py  base.py  deepseek.py  embedder.py  factory.py  groq.py
app/memory/: lessons.py  long_term.py
app/os/: __init__.py  event_bus.py  goal_manager.py  guard.py  knowledge_graph.py  plugin.py
app/prompt/: builder.py
app/tools/: auto_apply_tool.py  base.py  browser_tool.py  calc_tool.py  calendar_tool.py  cctv_tool.py  doc_tool.py  factory.py  file_tool.py  gmail_draft.py  home_cctv.py  http_tool.py  init.py  job_hunt_tool.py  job_store.py  news_tool.py  polymarket_tool.py  registry.py  reminder_tool.py  time_tool.py  traffic_tool.py  weather_tool.py  web_research_tool.py  webfetch_tool.py
docs/: dashboard.md
docs/superpowers/plans/: 2026-07-13-linkedin-job-assist-plan.md
docs/superpowers/specs/: 2026-07-01-phase-7a-core-os-design.md  2026-07-10-open-loop-tracker-design.md  2026-07-13-linkedin-job-assist-design.md
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js
memory/: profile.json
prompts/: planner.md  reflector.md  system.md
scripts/: deploy.sh  google_auth.py
tests/: test_all.py
