[project]
name = "ai-chief-of-staff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.60.0",
    "openai>=2.44.0",
    "playwright>=1.55.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "google-auth>=2.50.0",
    "google-auth-oauthlib>=1.3.1",
    "google-api-python-client>=2.198.0",
]
